compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.fir.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static final EnumNameOverride valueOf(java.lang.String) throws java.lang.IllegalArgumentException, java.lang.NullPointerException;//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static final EnumNameOverride[] values();//  values()

  private  EnumNameOverride();//  .ctor()

}
